2011-11-06  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/newusers.c, man/newusers.8.xml: Add --root option.

2011-11-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/vipw.c: Remove unused variable a.

2011-11-06  Nicolas François  <nicolas.francois@centraliens.net>

	* man/generate_mans.mak: The xml-config files do not depend on the
	Makefile.

2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c, src/chgpasswd.c, src/chpasswd.c, src/chsh.c,
	src/faillog.c, src/gpasswd.c, src/groupadd.c, src/groupdel.c,
	src/groupmems.c, src/groupmod.c, src/grpconv.c, src/grpunconv.c,
	src/lastlog.c, src/newusers.c, src/passwd.c, src/pwconv.c,
	src/pwunconv.c, src/su.c, src/useradd.c, src/userdel.c,
	src/usermod.c, src/vipw.c: Align and sort options.

2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/pwck.c, man/pwck.8.xm, src/grpck.c, man/grpck.8.xml:
	Add --root option.

2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>

	* man/limits.5.xml, libmisc/limits.c: Sort limit identifiers.
	* libmisc/limits.c: Fix support for the K limit identifier.
	* libmisc/limits.c: Add missing default limit for L and U.

2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c, man/pwck.8.xml: Add support for long options.
	* src/pwck.c, man/pwck.8.xml: Add -h/--help option
	* src/grpck.c, man/grpck.8.xml: Add support for long options.
	* src/grpck.c, man/grpck.8.xml: Add -h/--help option

2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/expiry.c, man/expiry.1.xml: Add support for long options.
	* src/expiry.c, man/expiry.1.xml: Add -h/--help option

2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chfn.c, man/chfn.1.xml: Add support for long options.
	* src/chfn.c, man/chfn.1.xml: Add -u/--help option
	* NEWS, src/chfn.c, man/chfn.1.xml: Add --root option.
